--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <nav>
                         <ul>
                             <li><a href="test.html" class="active-nav">home</a></li>
-                            <li><a href="abute us/abute ue.html">abute us</a></li>
+                            <li><a href="abute us/abute ue.html">about us</a></li>
                             <li><a href="contact us/contactus.html">contact us</a></li>
                         </ul>
                     </nav>
